# iowarp-hooks

./: CLAUDE.md  README.md  migrate_settings.py  pyproject.toml
.claude/: .hook_metadata.json  settings.json
.claude/docker/observability_docker/: .env
.github/workflows/: build-docker-images.yml
docker/observability_viz/: Dockerfile.grafana  Dockerfile.influxdb  README.md  docker-compose.yml
docker/observability_viz/grafana/provisioning/dashboards/: claude-code-events.json  opencode-events.json
docker/observability_viz/grafana/provisioning/datasources/: influxdb.yml
hooks/observability_agentlog/: .env.multi.example  .env.single.example  chronolog_reader_unified.py  pyproject.toml  send_event_chronolog_unified.py  settings.json
hooks/observability_agentlog/installation_guide/: multi_node_deployment_guide.md  single_node_deployment_guide.md
hooks/observability_log/: config.yaml
hooks/observability_log/hooks/: send_event_influxdb.py
hooks/observability_viz/: config.yaml
hooks/observability_viz/hooks/: send_event_influxdb.py
hooks/observability_viz/infrastructure/: README.md
logs/: claude_events.jsonl
opencode_plugins/: README.md
opencode_plugins/observability_influxdb/: .env.template  README.md  config.yaml  influxdb-observability.js  package.json
plugin/: influxdb-observability-plugin.js
src/iowarp_hooks/: __init__.py  hook_manager.py  installer.py  templates.py
src/iowarp_hooks/interactive/: __init__.py  actions.py  installer.py  paths.py
