[project]
name = "claude-chronolog-hooks"
version = "1.0.0"
description = "ChronoLog observability hooks for Claude Code integration"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.11"

[tool.uv.workspace]
members = ["."]

[project.scripts]
send-chronolog-event = "hooks.send_event_chronolog_unified:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["hooks"]